--- a/style.css
+++ b/style.css
@@ -156,3 +156,10 @@ nav a{
    transform: translateY(0);
  }
 }
+.subtext {
+  font-size: 16px;
+  color: #555;
+  margin-top: 10px;
+  letter-spacing: 1px;
+}
+
